fixed main image to where top man's head isn't being cropped out.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,9 +52,11 @@ p {
   height: 800px;
   width: 100%;
   margin-bottom: 25px;
-  background-image: url("../images/digital-marketing-meeting.jpg");
-  background-size: cover;
-  background-position: center;
+}
+
+.hero img {
+  width: 100%;
+  height: 100%;
 }
 
 .float-left {
